# whistle

./: .pre-commit-config.yaml  pyproject.toml
app/templates/: index.html
whistle/: main.py  utils.py
